test_cases/runnable/fail_function_1.out
lli: ./test_cases/runnable/fail_function_1.compiled:1:1: error: expected top-level entity
Fatal error: exception Failure("return gives int expected float in i")
^
